// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../src/core/database/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum WorkOrderStatus {
  RECEIVED
  IN_REVIEW
  IN_REPAIR
  READY
  DELIVERED
  CANCELED
}

enum ConceptType {
  SERVICE
  SHOP_SUPPLY
  CUSTOMER_SUPPLY
}

enum EvidenceKind {
  PHOTO
}

model Tenant {
  id        Int      @id @default(autoincrement())
  name      String
  slug      String   @unique
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  users User[]
  roles Role[]
  customers Customer[]
  vehicles Vehicle[]
  workOrders WorkOrder[]
  workOrderStatusHistories WorkOrderStatusHistory[]
  supplyCatalogItems SupplyCatalogItem[]
  workOrderConcepts WorkOrderConcept[]
  workOrderEvidences WorkOrderEvidence[]
  workOrderPublicTokens WorkOrderPublicToken[]
  publicLinkAccessLogs PublicLinkAccessLog[]
}

model User {
  id           Int      @id @default(autoincrement())
  tenantId     Int
  email        String
  name         String
  lastName     String
  passwordHash String
  isActive     Boolean  @default(true)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])

  userRoles UserRole[]
  workOrders WorkOrder[]
  workOrderStatusHistories WorkOrderStatusHistory[]
  workOrderConcepts WorkOrderConcept[]
  workOrderEvidences WorkOrderEvidence[]
  workOrderPublicTokens WorkOrderPublicToken[]

  @@unique([tenantId, email])
  @@index([tenantId])
}

model Role {
  id          Int      @id @default(autoincrement())
  tenantId    Int
  name        String
  isSystem    Boolean  @default(false)
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])

  userRoles     UserRole[]
  rolePermissions RolePermission[]

  @@unique([tenantId, name])
  @@index([tenantId])
}

model Permission {
  id          Int      @id @default(autoincrement())
  code        String   @unique
  description String?
  createdAt   DateTime @default(now())

  rolePermissions RolePermission[]
}

model RolePermission {
  id           Int @id @default(autoincrement())
  roleId       Int
  permissionId Int

  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@unique([roleId, permissionId])
}

model UserRole {
  id     Int @id @default(autoincrement())
  userId Int
  roleId Int

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@unique([userId, roleId])
}

model Customer {
  id        Int      @id @default(autoincrement())
  tenantId  Int
  fullName  String
  phone     String
  email     String?
  notes     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])

  vehicles Vehicle[]
  workOrders WorkOrder[]

  @@unique([tenantId, phone])
  @@index([tenantId])
}

model Vehicle {
  id         Int      @id @default(autoincrement())
  tenantId   Int
  customerId Int
  make       String?
  model      String?
  year       Int?
  plate      String?
  vin        String?
  color      String?
  notes      String?
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])
  customer Customer @relation(fields: [customerId], references: [id])

  workOrders WorkOrder[]

  @@index([tenantId, customerId])
  @@index([tenantId, plate])
}

model WorkOrder {
  id                Int              @id @default(autoincrement())
  tenantId          Int
  customerId        Int
  vehicleId         Int?
  folio             String?
  status            WorkOrderStatus  @default(RECEIVED)
  problemDescription String?
  internalNotes     String?
  deliveredAt       DateTime?
  canceledAt        DateTime?
  cancelReason      String?
  createdByUserId   Int?
  createdAt         DateTime         @default(now())
  updatedAt         DateTime         @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])
  customer Customer @relation(fields: [customerId], references: [id])
  vehicle Vehicle? @relation(fields: [vehicleId], references: [id])
  createdByUser User? @relation(fields: [createdByUserId], references: [id])

  workOrderStatusHistories WorkOrderStatusHistory[]
  workOrderConcepts WorkOrderConcept[]
  workOrderEvidences WorkOrderEvidence[]
  workOrderPublicTokens WorkOrderPublicToken[]

  @@index([tenantId, status])
  @@index([tenantId, createdAt])
  @@index([tenantId, folio])
}

model WorkOrderStatusHistory {
  id                Int              @id @default(autoincrement())
  tenantId          Int
  workOrderId       Int
  fromStatus        WorkOrderStatus?
  toStatus          WorkOrderStatus
  note              String?
  createdByUserId   Int?
  createdAt         DateTime         @default(now())

  tenant Tenant @relation(fields: [tenantId], references: [id])
  workOrder WorkOrder @relation(fields: [workOrderId], references: [id])
  createdByUser User? @relation(fields: [createdByUserId], references: [id])

  @@index([workOrderId, createdAt])
  @@index([tenantId, createdAt])
}

model SupplyCatalogItem {
  id             Int      @id @default(autoincrement())
  tenantId       Int
  name           String
  unit           String?
  suggestedPrice Decimal? @db.Decimal(12, 2)
  sku            String?
  isActive       Boolean  @default(true)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])

  workOrderConcepts WorkOrderConcept[]

  @@index([tenantId, name])
  @@index([tenantId, isActive])
}

model WorkOrderConcept {
  id                        Int         @id @default(autoincrement())
  tenantId                  Int
  workOrderId               Int
  type                      ConceptType
  name                      String
  description               String?
  unit                      String?
  quantity                  Decimal     @default(1) @db.Decimal(12, 3)
  unitPrice                 Decimal     @default(0) @db.Decimal(12, 2)
  sourceSupplyCatalogItemId Int?
  wasAutocompleted          Boolean     @default(false)
  wasEdited                 Boolean     @default(false)
  createdByUserId           Int?
  createdAt                 DateTime    @default(now())
  updatedAt                 DateTime    @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])
  workOrder WorkOrder @relation(fields: [workOrderId], references: [id])
  sourceSupplyCatalogItem SupplyCatalogItem? @relation(fields: [sourceSupplyCatalogItemId], references: [id])
  createdByUser User? @relation(fields: [createdByUserId], references: [id])

  @@index([workOrderId])
  @@index([tenantId, workOrderId])
}

model WorkOrderEvidence {
  id               Int          @id @default(autoincrement())
  tenantId         Int
  workOrderId      Int
  kind             EvidenceKind @default(PHOTO)
  storageProvider  String       @default("s3")
  storageKey       String
  publicUrl        String?
  mime             String
  sizeBytes        BigInt
  width            Int?
  height           Int?
  createdByUserId  Int?
  createdAt        DateTime     @default(now())

  tenant Tenant @relation(fields: [tenantId], references: [id])
  workOrder WorkOrder @relation(fields: [workOrderId], references: [id])
  createdByUser User? @relation(fields: [createdByUserId], references: [id])

  @@index([workOrderId, createdAt])
  @@index([tenantId, createdAt])
}

model WorkOrderPublicToken {
  id              Int      @id @default(autoincrement())
  tenantId        Int
  workOrderId     Int
  token           String   @unique
  isActive        Boolean  @default(true)
  expiresAt       DateTime
  revokedAt       DateTime?
  createdByUserId Int?
  createdAt       DateTime @default(now())

  tenant Tenant @relation(fields: [tenantId], references: [id])
  workOrder WorkOrder @relation(fields: [workOrderId], references: [id])
  createdByUser User? @relation(fields: [createdByUserId], references: [id])

  publicLinkAccessLogs PublicLinkAccessLog[]

  @@index([workOrderId, isActive])
  @@index([tenantId, expiresAt])
}

model PublicLinkAccessLog {
  id                       Int      @id @default(autoincrement())
  tenantId                 Int
  workOrderPublicTokenId   Int
  ip                       String?
  userAgent                String?
  referer                  String?
  accessedAt               DateTime @default(now())

  tenant Tenant @relation(fields: [tenantId], references: [id])
  workOrderPublicToken WorkOrderPublicToken @relation(fields: [workOrderPublicTokenId], references: [id])

  @@index([workOrderPublicTokenId, accessedAt])
  @@index([tenantId, accessedAt])
}
